# CrowBrowser

./: .gitignore  LICENSE  README.md  SOURCES.md  app.js  index-old.html  index.html  meson.build  package-lock.json  package.json  renderer.js
css/: styles.css
data/: crow-browser.gresource.xml
js/: script.js
src/: adblock.vala  application.vala  browser-window.vala  crypto-utils.vala  download-manager.vala  downloads-dialog.vala  extension-manager.vala  history-dialog.vala  history-manager.vala  main.vala  settings-dialog.vala  settings-manager.vala  update-manager.vala  video-downloader.vala  web-tab.vala
